完善功能